--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   background-color: white;
   height: 1050px;
   display: block;
-  position: absolute;
+  position: relative;
   cursor: none;
   overflow: hidden;
 }
@@ -81,6 +81,12 @@ top: 5.54%;
   left: 28%;
   top: 14%;
   background-repeat: no-repeat;
+}
+.wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 .ornament {
   position: absolute;
@@ -171,13 +177,17 @@ background-color: white;
 #line {
   position: absolute;
   width: 1px;
-  height: 2100px;
+  /* height: 2100px; */
+  top: 0;
+  bottom: 0;
   background-color: white;
 }
 #line2 {
   position: absolute;
-  width: 3360px;
+  /* width: 3360px; */
   height: 1px;
+  left: 0;
+  right: 0;
   background-color: white;
 }
 @font-face {
@@ -224,7 +234,7 @@ top:e.pageY - 6
 });
 
       $(document).mousemove(e => {
-	let от_верхнего_края_блока_до_курсора = e.pageY - $('.vulkan').offset().top;
+	let от_верхнего_края_блока_до_курсора = parseInt(e.pageY - $('.vulkan').offset().top);
 	$('.coord').text( от_верхнего_края_блока_до_курсора );
 });
 
@@ -245,7 +255,9 @@ top:e.pageY - 6
     </script>
   </head>
   <body>
-
+    <div class="wrapper">
+      <div class="ornament"></div>
+    </div>
 
     <div class="sidepannel">
 <div class="time sun">
@@ -267,15 +279,16 @@ top:e.pageY - 6
 <div class="green">
 </div>
 
-<div class="eyecontainer">
+<!-- <div class="eyecontainer">
 <div class="eye"></div>
-</div>
+</div> -->
 
-<div class="ornament"></div>
+
+
 
 <div id="cursor">
 </div>
-<!-- <div id="line"></div>
-<div id="line2"></div> -->
+<div id="line"></div>
+<div id="line2"></div>
   </body>
 </html>
