--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 body {
   width: 1680px;
   margin: 0 auto;
-  /* background-color: rgba(134, 106, 225, 1); */
-  background-color: white;
+  background-color: rgba(134, 106, 225, 1);
+  /* background-color: white; */
   height: 1050px;
   display: block;
   position: relative;
