--- a/index.html
+++ b/index.html
@@ -453,6 +453,36 @@ pointer-events: none;
    font-family: Pragmatica;
    src: url(fonts/Pragmatica.otf);
   }
+.info {
+position: absolute;
+width: 33.33vw;
+height: 100%;
+background: #000000;
+left: -33.33vw;
+transition: 1s ease;
+opacity: 0;
+}
+.cross {
+  position: absolute;
+  background: url("images/cross.svg");
+  background-size: contain;
+  width: 2.08vw;
+  height: 2.08vw;
+  background-repeat: no-repeat;
+  right: 34px;
+  top: 51px;
+}
+.info h1 {
+position: absolute;
+left: 34px;
+top: 39px;;
+font-family: Garamond;
+font-style: normal;
+font-weight: bold;
+font-size: 55px;
+line-height: 62px;
+color: #FFFFFF;
+}
     </style>
 
     <!-- <script type="text/javascript">
@@ -483,6 +513,16 @@ pointer-events: none;
 
       $(".fire").click(function(){
      $(this).css("animation-play-state", "running");
+});
+
+$(".girl").click(function(){
+$(".info").css("left", "0");
+$(".info").css("opacity", "1");
+});
+
+$(".cross").click(function(){
+$(".info").css("left", "-33.33vw");
+$(".info").css("opacity", "0");
 });
 
 // $(".vo" || ".green").mouseover(function(){
@@ -648,6 +688,11 @@ top:e.pageY - 0
 <path fill-rule="evenodd" clip-rule="evenodd" d="M43.4756 0H48.9136V5.4043H54.3459H59.7837V10.8008H65.2161V16.2051H70.6487V21.6035H76.0864V27.002H70.6484L70.6487 32.4043H65.2163H59.7837V37.8027H54.3459H48.9136V43.207H43.4756H38.0432H32.6108H27.1729V37.8027H21.7405H16.3027V32.4043H10.8704H5.43799V27.002H0V21.6035H5.43799V16.2051H10.8704V10.8008H16.3027V5.4043H21.7405H27.1729V0H32.6108H38.0432H43.4756Z" fill="white"/>
 </clipPath>
 </svg> -->
+
+<div class="info venus">
+<div class="cross"></div>
+<h1>Информация</h1>
+</div>
 
   </body>
 </html>
