--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ $(".km").css({
 
     <script type="text/javascript">
     $(window).resize(function() {
-     if ($(window).height() < 320 && $(window).width() > 568) {
+     if ($(window).height() < 700 && $(window).width() > 1024) {
         alert('Дорогой друг! Ты масштабировал окно браузера слишком увлеченно и сломал сайт. Исправься.');
      }
    });
@@ -261,43 +261,55 @@ $(".km").css({
 </div>
 <div class="vo">
   <div class="voo"></div>
-  <div class="square v"><p>главный<br>вулкан</p> </div>
-</div>
-<div class="vulkan">
 </div>
 
+<div class="sq vuvu">
+  <div class="vulkan"></div>
+  <div class="oval v"><p>главный<br>вулкан</p></div>
+</div>
+
+
 <div class="panto">
-  <div class="square pa">
+</div>
+
+<div class="sq papa">
+  <div class="pant"></div>
+  <div class="oval pa">
   <p>главный<br>храм</p>
   </div>
 </div>
-<div class="pant">
-</div>
 
-
-<div class="celcium">
-</div>
 <div class="co">
-  <div class="square ce">
+</div>
+
+<div class="sq cece">
+  <div class="celcium"></div>
+  <div class="oval ce">
   <p>великий<br>термометр</p>
   </div>
 </div>
 
 <div class="veno">
   <div class="venoo"></div>
-  <div class="square gi">
+  <!-- <div class="square gi">
+  <p>зона<br>Венеры</p>
+  </div> -->
+</div>
+<div class="sq gigi">
+  <div class="girl"></div>
+  <div class="oval gigigi">
   <p>зона<br>Венеры</p>
   </div>
 </div>
-<div class="girl">
-</div>
+
 
 <div class="kuzo">
-<div class="square ku">
-  <p>кузница<br>бога</p>
 </div>
-</div>
-<div class="kuzn">
+<div class="sq kuku">
+  <div class="kuzn"></div>
+  <div class="oval ku">
+    <p>кузница<br>бога</p>
+  </div>
 </div>
 
 <div class="cubo">
@@ -309,28 +321,40 @@ $(".km").css({
 </div>
 
 <div class="kolizo">
-  <div class="square kol">
+</div>
+
+<div class="sq koko">
+  <div class="koliz">
+  </div>
+  <div class="oval kol">
     <p>амфитеатр</p>
   </div>
 </div>
-<div class="koliz">
-</div>
+
 
 <div class="homo">
-  <div class="square ho">
+
+</div>
+<div class="sq hoho">
+  <div class="houses"></div>
+  <div class="oval ho">
     <p>спальная<br>зона</p>
   </div>
 </div>
-<div class="houses">
-</div>
 
 <div class="sticko">
-  <div class="square sto">
-    <p>детская<br>арена</p>
-  </div>
+
 </div>
-<div class="stickleft"></div>
-<div class="stickright"></div>
+<div class="sq stst">
+<div class="sticks">
+  <div class="stickleft"></div>
+  <div class="stickright"></div>
+</div>
+<div class="oval sto">
+  <p>детская<br>арена</p>
+</div>
+</div>
+
 
 <div class="white">
   <div class="movement">
@@ -339,12 +363,15 @@ $(".km").css({
 </div>
 
 <div class="greeno">
-  <div class="square gree">
+
+</div>
+<div class="sq gregre">
+  <div class="green"></div>
+  <div class="oval gree">
     <p>божественный<br>росток</p>
   </div>
 </div>
-<div class="green">
-</div>
+
 
 <div class="clotho">
   <div class="square cloth">
@@ -353,19 +380,24 @@ $(".km").css({
 </div>
 
 <div class="bogo">
-  <div class="square bo">
+
+</div>
+<div class="sq bobo">
+  <div class="bog"></div>
+  <div class="oval bo">
     <p>зона<br>Вулкана</p>
   </div>
 </div>
-<div class="bog">
-</div>
+
+
 <div class="diso">
-  <div class="square dis">
+
+</div>
+<div class="sq didi">
+  <div class="disco"></div>
+  <div class="oval dis">
     <p>тусовочная<br>зона</p>
   </div>
-</div>
-<div class="disco">
-
 </div>
 
 <div class="fire a"></div>
@@ -419,9 +451,11 @@ $(".km").css({
 </div>
 
 <!-- <div class="anana">
+</div> -->
 
-</div>
-<div class="draggable">
+<!-- <div class="draggable">
+  <div class="blue"></div>
+  <div class="black"></div>
 </div>
 <div class="ananaa"></div> -->
 
