--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@ $(".fire").click(function(){
 
    setTimeout(function(){
        $(".cow").addClass("block");
-  }, 2000);
+  }, 1200);
 
 });
 
 $(".cow").hover(function(){
-  $(this).removeClass("block");
+  $(this).addClass("kill");
   });
 
 
@@ -447,7 +447,11 @@ if ($('.draggableble').is(":hover")) {
 <div class="fire e"></div>
 <div class="fire f"></div>
 
-<div class="cow none">
+<div class="cow lol">
+</div>
+<div class="cow lal">
+</div>
+<div class="cow lel">
 </div>
 
 
